@@ -9,7 +9,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 public class UserDetailsImpl implements UserDetails {
@@ -18,7 +17,7 @@ public class UserDetailsImpl implements UserDetails {
     private final Long userId;
     private final String passwordHash;
     private final Boolean isDeleted;
-    private final Collection<GrantedAuthority> authority;
+    private final Collection<? extends GrantedAuthority> authority;
 
     public UserDetailsImpl(User user) {
         this.login = user.getLogin();
@@ -63,7 +62,7 @@ public class UserDetailsImpl implements UserDetails {
         return !this.isDeleted;
     }
 
-    private Collection<GrantedAuthority> mapRolesToAuthorities(List<Role> roles) {
-        return roles.stream().map(role -> new SimpleGrantedAuthority(role.getRoleName())).collect(Collectors.toList());
+    private Collection<? extends GrantedAuthority> mapRolesToAuthorities(List<Role> roles) {
+        return roles.stream().map(role -> new SimpleGrantedAuthority(role.getRoleName())).toList();
     }
 }
